// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainPage reducer getDivisionsArrayNonBlockSaga on fail should return 2 expected yields. 3 yield should be in state Done 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`MainPage reducer getDivisionsArrayNonBlockSaga on fail should return 2 expected yields. 3 yield should be in state Done 2`] = `"getDivisionsArrayApi"`;

exports[`MainPage reducer getDivisionsArrayNonBlockSaga on fail should return 2 expected yields. 3 yield should be in state Done 3`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "payload": Object {
          "error": "some error",
        },
        "type": "GET_DIVISIONS_ARRAY_FAILED",
      },
      "channel": null,
    },
  },
}
`;

exports[`MainPage reducer getDivisionsArrayNonBlockSaga on fail should return 2 expected yields. 3 yield should be in state Done 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`MainPage reducer getDivisionsArrayNonBlockSaga on success should return 2 expected yields. 3 yield should be in state Done 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`MainPage reducer getDivisionsArrayNonBlockSaga on success should return 2 expected yields. 3 yield should be in state Done 2`] = `"getDivisionsArrayApi"`;

exports[`MainPage reducer getDivisionsArrayNonBlockSaga on success should return 2 expected yields. 3 yield should be in state Done 3`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "payload": Object {
          "divisionsArray": Array [
            Object {
              "HID": 1,
              "id": 1,
              "title": "Soda",
            },
            Object {
              "HID": 3,
              "id": 3,
              "title": "Water inc.",
            },
            Object {
              "HID": 2,
              "id": 2,
              "title": "Clean water family company",
            },
          ],
        },
        "type": "GET_DIVISIONS_ARRAY_SUCCESS",
      },
      "channel": null,
    },
  },
}
`;

exports[`MainPage reducer getDivisionsArrayNonBlockSaga on success should return 2 expected yields. 3 yield should be in state Done 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`MainPage reducer getDivisionsArraySaga should be in loop and return expected values 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "TAKE": Object {
      "pattern": "GET_DIVISIONS_ARRAY",
    },
  },
}
`;

exports[`MainPage reducer getDivisionsArraySaga should be in loop and return expected values 2`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "FORK": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`MainPage reducer getDivisionsArraySaga should be in loop and return expected values 3`] = `"getDivisionsArrayNonBlockSaga"`;

exports[`MainPage reducer getDivisionsArraySaga should be in loop and return expected values 4`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "TAKE": Object {
      "pattern": "GET_DIVISIONS_ARRAY",
    },
  },
}
`;

exports[`MainPage reducer getUserProfilesArrayNonBlockSaga on fail should return 2 expected yields. 3 yield should be in state Done 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`MainPage reducer getUserProfilesArrayNonBlockSaga on fail should return 2 expected yields. 3 yield should be in state Done 2`] = `"getUserProfilesArrayApi"`;

exports[`MainPage reducer getUserProfilesArrayNonBlockSaga on fail should return 2 expected yields. 3 yield should be in state Done 3`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "payload": Object {
          "error": "some error",
        },
        "type": "GET_USER_PROFILE_ARRAY_FAILED",
      },
      "channel": null,
    },
  },
}
`;

exports[`MainPage reducer getUserProfilesArrayNonBlockSaga on fail should return 2 expected yields. 3 yield should be in state Done 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`MainPage reducer getUserProfilesArrayNonBlockSaga should return 2 expected yields. 3 yield should be in state Done 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`MainPage reducer getUserProfilesArrayNonBlockSaga should return 2 expected yields. 3 yield should be in state Done 2`] = `"getUserProfilesArrayApi"`;

exports[`MainPage reducer getUserProfilesArrayNonBlockSaga should return 2 expected yields. 3 yield should be in state Done 3`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "payload": Object {
          "userProfilesArray": Array [
            Object {
              "id": 1,
              "name": "Ben",
              "order": 1,
            },
            Object {
              "id": 3,
              "name": "Suzan",
              "order": 3,
            },
            Object {
              "id": 2,
              "name": "John",
              "order": 2,
            },
          ],
        },
        "type": "GET_USER_PROFILE_ARRAY_SUCCESS",
      },
      "channel": null,
    },
  },
}
`;

exports[`MainPage reducer getUserProfilesArrayNonBlockSaga should return 2 expected yields. 3 yield should be in state Done 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`MainPage reducer getUserProfilesArraySaga should be in loop and return expected values 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "TAKE": Object {
      "pattern": "GET_USER_PROFILE_ARRAY",
    },
  },
}
`;

exports[`MainPage reducer getUserProfilesArraySaga should be in loop and return expected values 2`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "FORK": Object {
      "args": Array [],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`MainPage reducer getUserProfilesArraySaga should be in loop and return expected values 3`] = `"getUserProfilesArrayNonBlockSaga"`;

exports[`MainPage reducer getUserProfilesArraySaga should be in loop and return expected values 4`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "TAKE": Object {
      "pattern": "GET_USER_PROFILE_ARRAY",
    },
  },
}
`;

exports[`MainPage reducer mainPageSaga should return 1 yield with 2 sagas. 2d yield should be in state Done 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      GeneratorFunctionPrototype {
        "_invoke": [Function],
      },
      GeneratorFunctionPrototype {
        "_invoke": [Function],
      },
    ],
  },
}
`;

exports[`MainPage reducer mainPageSaga should return 1 yield with 2 sagas. 2d yield should be in state Done 2`] = `
Object {
  "done": true,
  "value": undefined,
}
`;
